<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/logo_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bluetooth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/device_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logo_device"
        app:layout_constraintTop_toTopOf="@id/logo_device" />

    <TextView
        android:id="@+id/tv_device_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/device_address"
        android:textColor="@color/btn_dis_enable"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logo_device"
        app:layout_constraintTop_toBottomOf="@id/tv_device_name" />

    <View
        android:layout_width="@dimen/_2sdp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tv_device_address"

        app:layout_constraintEnd_toStartOf="@id/device_setting"
        app:layout_constraintTop_toTopOf="@id/tv_device_name" />

    <ImageView
        android:id="@+id/device_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_device_address"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>